@@ -4,6 +4,9 @@ Changelog
 
 1.0a9
 -----
+* Display template name in breadcrumbs (copied from ZugSkin)
+  [fsprenger]
+  
 * Refactored join form
   [fsprenger]
 
